# CppCallMtlab

./: .gitignore  CMakeLists.txt  readme.md
include/engine_demo/: engine_demo.h
include/use_dll/: use_dll.h
include/use_engine/: use_engine.h
lib/engine_demo/: libmex.lib
lib/use_engine/: libMatlabDataArray.lib  libMatlabEngine.lib
src/: engdemo.cpp  test_demo.cpp  use_dll.cpp  use_engine.cpp
